Udpate Phnom Penh

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               ខេត្ត/តំបន់
               <div class="sub-menu-dropdown">
                 <ul>
-                  <li>ភ្នំពេញ</li>
+                  <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
                   <li>បាត់ដំបង</li>
                   <li>សៀមរាប</li>
                   <li>ពោធិ៍សាត់</li>
@@ -124,7 +124,7 @@
             <img src="images/Ankor_Wat_temple.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title" href="/សៀមរាប.html">សៀមរាប</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
