--- a/seemore.html
+++ b/seemore.html
@@ -100,7 +100,7 @@
             <img src="images/Ankor_Wat_temple.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">សៀមរាប</a>
+            <a class="area-title" href="/សៀមរាប.html">សៀមរាប</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
