update readmore and change backgroud to black

--- a/seemore.html
+++ b/seemore.html
@@ -110,7 +110,7 @@
         </div>
         <div class="area col-6 d-flex">
           <div class="col-">
-            <img src="images/Cambodia/ព្រះសីហនុ.jpg" alt="">
+            <figure><img src="images/Cambodia/ព្រះសីហនុ.jpg" class="hover06 column" alt=""></figure>
             </div>
           <div class="area-description">
             <a class="area-title">ព្រះសីហនុ</a>
