--- a/seemore.html
+++ b/seemore.html
@@ -20,9 +20,9 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="./dist/style/style.css">
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="preloader_wrapper"></div>
-      </div>
+      </div> -->
     <head>
   </head>
   <body>
@@ -124,7 +124,7 @@
             <img src="images/Cambodia/កោះកុង.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">កោះកុង</a>
+              <a class="area-title" href="កោះកុង.html">កោះកុង</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
