--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -22,9 +22,9 @@
       <head>
    </head>
    <body>
-      <div class="preloader">
+      <!-- <div class="preloader">
          <div class="preloader_wrapper"></div>
-      </div>
+      </div> -->
       <nav id="menu-navbar">
          <div id="navbar-content-wrapper">
             <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
@@ -79,7 +79,7 @@
                <div class="description-1">
                   <div class="img-content-wrap">
                      <!-- Main Image of Post in Top -->
-                     <img class="img-content-post" src="images/Ankor_Wat_temple.jpg"/>
+                     <img class="img-content-post" src="images/Cambodia/កោះកុង.jpg"/>
                      <div class="overlay">
                         <!-- Title Will show upper Main Image -->
                         <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តកោះកុង</p>
