--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -89,7 +89,7 @@
                   <!-- Discription of post write here -->
                   <p class="text-description"></p>
                   <!-- Sub Title it will show Border, Big , and color red -->
-                  <p class="text-title-readmore"></p>កោះកុងក្រៅ​</p>
+                  <p class="text-title-readmore"></p></p>
                   <!-- Sub Title 1 will show border, Big , color back -->
                   <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
                   <!-- Image post in Discription -->
