Create province page

--- a/seemore.html
+++ b/seemore.html
@@ -100,7 +100,7 @@
             <img src="images/Ankor_Wat_temple.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title" href="/សៀមរាប.html">សៀមរាប</a>
+            <a class="area-title" href="សៀមរាប.html">សៀមរាប</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -113,7 +113,7 @@
             <figure><img src="images/Cambodia/ព្រះសីហនុ.jpg" class="hover06 column" alt=""></figure>
             </div>
           <div class="area-description">
-            <a class="area-title">ព្រះសីហនុ</a>
+            <a class="area-title" href="ព្រះសីហនុ.html">ព្រះសីហនុ</a>
             <p class="area-short-description">
               ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល កំពង់ស្ពឺ និង ពោធិ៍សាត់។ក្រុងទីរួមខេត្តកំពង់ឆ្នាំងគឺក្រុងកំពង់ឆ្នាំង។
             </p>
@@ -137,7 +137,7 @@
             <img src="images/Cambodia/បាត់ដំបង.jpg" alt="">  
           </div>
           <div class="area-description">
-            <a class="area-title">បាត់ដំបង</a>
+            <a class="area-title" href="បាត់ដំបង.html" >បាត់ដំបង</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -150,7 +150,7 @@
           <img src="images/Cambodia/កែប.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">កែប</a>
+            <a class="area-title" href="កែប.html">កែប</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -163,7 +163,7 @@
             <img src="images/Cambodia/កំពត.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">កំពត</a>
+            <a class="area-title" href="កំពត.html">កំពត</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -176,7 +176,7 @@
           <img src="images/Cambodia/ព្រះវិហារ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">ព្រះវិហារ</a>
+            <a class="area-title" href="ព្រះវិហារ.html">ព្រះវិហារ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -189,7 +189,7 @@
             <img src="images/Cambodia/កំពង់ស្ពឺ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">កំពង់ស្ពឺ</a>
+            <a class="area-title" href="កំពង់ស្ពឺ.html">កំពង់ស្ពឺ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -202,7 +202,7 @@
             <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">កំពង់ឆ្នាំង</a>
+            <a class="area-title" href="កំពង់ឆ្នាំង.html">កំពង់ឆ្នាំង</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -215,7 +215,7 @@
             <img src="images/Cambodia/ក្រចេះ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">ក្រចេះ</a>
+            <a class="area-title" href="ក្រចេះ.html">ក្រចេះ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -228,7 +228,7 @@
             <img src="images/Cambodia/តាកែវ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">តាកែវ</a>
+            <a class="area-title" href="តាកែវ.html">តាកែវ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -241,7 +241,7 @@
             <img src="images/Cambodia/ត្បូងឃ្មុំ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">ត្បូងឃ្មុំ</a>
+            <a class="area-title" href="ត្បូងឃ្មុំ.html">ត្បូងឃ្មុំ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -254,7 +254,7 @@
             <img src="images/Cambodia/បន្ទាយមានជ័យ.jpg" alt="">
           </div>
           <div class="area-description">
-            <a class="area-title">បន្ទាយមានជ័យ</a>
+            <a class="area-title" href="បន្ទាយមានជ័យ.html">បន្ទាយមានជ័យ</a>
             <p class="area-short-description">
               អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
               ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -267,7 +267,7 @@
               <img src="images/Cambodia/ភ្នំពេញ.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ភ្នំពេញ</a>
+              <a class="area-title" href="ភ្នំពេញ.html">ភ្នំពេញ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -280,7 +280,7 @@
               <img src="images/Cambodia/ប៉ៃលិន.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ប៉ៃលិន</a>
+              <a class="area-title" href="ប៉ៃលិន.html">ប៉ៃលិន</a>
               <p class="area-short-description">
                 ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល កំពង់ស្ពឺ និង ពោធិ៍សាត់។ក្រុងទីរួមខេត្តកំពង់ឆ្នាំងគឺក្រុងកំពង់ឆ្នាំង។
               </p>
@@ -291,7 +291,7 @@
               <img src="images/Cambodia/ពោធិ៍សាត់.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ពោធិ៍សាត់</a>
+              <a class="area-title" href="ពោធិ៍សាត់.html">ពោធិ៍សាត់</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -304,7 +304,7 @@
               <img src="images/Cambodia/ព្រៃវែង.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ព្រៃវែង</a>
+              <a class="area-title" href="ព្រៃវែង.html">ព្រៃវែង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -317,7 +317,7 @@
               <img src="images/Cambodia/កណ្ដាល.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">កណ្ដាល</a>
+              <a class="area-title" href="កណ្ដាល.html">កណ្ដាល</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -330,7 +330,7 @@
               <img src="images/Cambodia/កំពង់ចាម.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">កំពង់ចាម</a>
+              <a class="area-title" href="កំពង់ចាម.html">កំពង់ចាម</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -343,7 +343,7 @@
               <img src="images/Cambodia/កំពង់ធំ.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">កំពង់ធំ</a>
+              <a class="area-title" href="កំពង់ធំ.html">កំពង់ធំ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -356,7 +356,7 @@
               <img src="images/Cambodia/មណ្ដលគិរី.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">មណ្ដលគិរី</a>
+              <a class="area-title" href="មណ្ឌលគិរី.html">មណ្ដលគិរី</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -369,7 +369,7 @@
               <img src="images/Cambodia/រតនៈគិរី.pjg.jpeg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">រតនៈគិរី</a>
+              <a class="area-title" href="រតនៈគិរី.html">រតនៈគិរី</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -382,7 +382,7 @@
               <img src="images/Cambodia/ស្ទឹងត្រែង.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ស្ទឹងត្រែង</a>
+              <a class="area-title" href="ស្ទឹងត្រែង.html">ស្ទឹងត្រែង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -395,7 +395,7 @@
               <img src="images/Cambodia/ស្វាយរៀង.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">ស្វាយរៀង</a>
+              <a class="area-title" href="ស្វាយរៀង.html">ស្វាយរៀង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -408,7 +408,7 @@
               <img src="images/Cambodia/ឧត្តមានជ័យ.jpg" alt="">
             </div>
               <div class="area-description">
-                <a class="area-title">ឧត្ដមានជ័យ</a>
+                <a class="area-title" href="ឧត្ដមានជ័យ.html">ឧត្ដមានជ័យ</a>
                 <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
