--- a/index.html
+++ b/index.html
@@ -35,31 +35,31 @@
               <div class="sub-menu-dropdown">
                 <ul>
                   <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
-                  <li>បាត់ដំបង</li>
-                  <li>សៀមរាប</li>
-                  <li>ពោធិ៍សាត់</li>
-                  <li>ព្រៃវែង</li>
-                  <li>ស្វាយរៀង</li>
-                  <li>កំពង់ឆ្នាំង</li>
-                  <li>កំពត</li>
-                  <li>កំពង់ធំ</li>
-                  <li>តាកែវ</li>
-                  <li>មណ្ឌលគិរី</li>
-                  <li>រតនៈគិរី</li>
-                  <li>ឧត្ដមានជ័យ</li>
-                  <li>កែប</li>
-                  <li>ស្ទឹងត្រែង</li>
-                  <li>ព្រះវិហារ</li>
-                  <li>កោះកុង</li>
-                  <li>ព្រះសីហនុ</li>
-                  <li>កំពង់ស្ពឺ</li>
-                  <li>កំពង់ចាម</li> 
-                  <li>បន្ទាយមានជ័យ</li>
-                  <li>កណ្ដាល</li>
-                  <li>ក្រចេះ</li>
-                  <li>ប៉ៃលិន</li>
-                  <li>ត្បូងឃ្មុំ</li>
-                  <li>ស្វាយ</li>
+                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                  <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
+                  <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
+                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
+                  <a href="កំពត.html"><li>កំពត</li></a>
+                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                  <a href="តាកែវ.html"><li>តាកែវ</li></a>
+                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
+                  <a href="កែប.html"><li>កែប</li></a>
+                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
+                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
+                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                  <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                  <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
+                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
+                  <a href="ស្វាយ.html"><li>ស្វាយ</li></a>
                 </ul>
               </div>
             </li>
@@ -135,7 +135,7 @@
             <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="">
           </div>
             <div class="area-description">
-              <a class="area-title">កំពង់ឆ្នាំង</a>
+              <a class="area-title" href="កំពង់ឆ្នាំង.html">កំពង់ឆ្នាំង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -148,7 +148,7 @@
              <img src="images/Cambodia/កំពត.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">កំពត</a>
+              <a class="area-title" href="កំពត.html">កំពត</a>
               <p class="area-short-description">
                 កំពតគឺជាទីរួមរដ្ឋបាលនៃខេត្តកំពតត្រូវបានប្តូរឈ្មោះពីស្រុកកំពង់បាយ
                 តាមអនុក្រឹត្យលេខ​ ២២១ អនក្រ.បក នៅខែតុលា ២០០៨ មានផ្ទៃដីចំនួន៥៤០០ហិចតា។ 
@@ -161,7 +161,7 @@
               <img src="images/Cambodia/បាត់ដំបង.jpg" alt="">
             </div>
             <div class="area-description">
-              <a class="area-title">បាត់ដំបង</a>
+              <a class="area-title" href="បាត់ដំបង.html">បាត់ដំបង</a>
               <p class="area-short-description">
                 គឺជាខេត្តមួយនៅភាគពាយ័ព្យនៃព្រះរាជាណាចក្រកម្ពុជា។ខេត្តបាត់ដំបង
                 មានទីប្រជុំជនធំនៅក្រុងបាត់ដំបង។ខេត្តបាត់ដំបងមានព្រំប្រទល់ខាងជើង
