drop down fixed and cursor

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     />
 
     <!-- Style -->
-    <link rel="stylesheet" href="./dist/style/style.css" />
+    <link rel="stylesheet" href="./dist/style/style.css">
+    <script src="./dist/js/bootstrap/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <nav id="menu-navbar">
