--- a/index.html
+++ b/index.html
@@ -209,21 +209,21 @@
               <span>អត្ថបទពេញនិយម</span>
             </div>
             <div class="popular-place d-flex">
-              <img src="images/Cambodia/" alt="" />
+                <img src="images/កោះកុងក្រុង/308785875_1487277508449645_2370723360800564870_n.jpg" alt="" />
               <p class="place-decription">
-                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ ព្រែកស្វាយ សង្កាត់កោះរ៉ុង
-                ក្រុងព្រះ សីហនុ ខេត្តព្រះសីហនុ...
+                កោះកុងក្រៅ ដែលស្ថិតនៅក្នុងខេត្តកោះកុងដែលកំពុងល្បីខ្លាំង
+                ហើយក៏កន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវច្រើន...
               </p>
             </div>
             <div class="popular-place d-flex">
-              <img src="images/sea.jpg" alt="" />
+              <img src="images/កោះកុងក្រុង/271528174_108064488426189_2832815778392583449_n.jpg" alt="" />
               <p class="place-decription">
-                កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ ព្រែកស្វាយ សង្កាត់កោះរ៉ុង
-                ក្រុងព្រះ សីហនុ ខេត្តព្រះសីហនុ...
+                ខ្នងផ្សា ជាកន្លែងកំសាន្ដបែប ធម្មជាតិ ដោយបោះតង់
+                ដែលកំពុងល្បីខ្លាំងសម្រាប់យុវ័យជំនាន់ក្រោយ...
               </p>
             </div>
             <div class="popular-place d-flex">
-              <img src="images/sea.jpg" alt="" />
+              <img src="images/កោះកុងក្រុង/300671502_640124647761659_1864918394368863285_n.jpg" alt="" />
               <p class="place-decription">
                 កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ ព្រែកស្វាយ សង្កាត់កោះរ៉ុង
                 ក្រុងព្រះ សីហនុ ខេត្តព្រះសីហនុ...
