--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <img src="images/Ankor_Wat_temple.jpg" alt="" />
             </div>
             <div class="area-description">
-              <a class="area-title" href="/សៀមរាប.html">សៀមរាប</a>
+              <a class="area-title" href="សៀមរាប.html">សៀមរាប</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -200,7 +200,7 @@
             </div>
           </div>
           <div class="btn-readmore">
-            <a href="seemore.html" class="clv_btn">See More...</a>
+            <a href="seemore.html" class="clv_btn">ច្រើនទៀត...</a>
           </div>
         </div>
         <div class="col-5">
@@ -239,7 +239,7 @@
               </p>
             </div>
             <div class="popular-place d-flex">
-              <img src="images/sea.jpg" alt="" />
+              <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះសង្សារ.jpg" alt="" />
               <p class="place-decription">
                 កោះសង្សារ មានទីតាំងស្ថិតនៅ ភូមិ ព្រែកស្វាយ សង្កាត់កោះរ៉ុង
                 ក្រុងព្រះ សីហនុ ខេត្តព្រះសីហនុ...
