--- a/កោះកុង.html
+++ b/កោះកុង.html
@@ -33,28 +33,44 @@
                </a>
                <ul class="menu-list">
                   <li>
-                     ខេត្ត/តំបន់
-                     <div class="sub-menu-dropdown">
-                        <ul>
-                           <li>សណ្ឋាគារ</li>
-                           <li>រថយន្ត</li>
-                           <li>រថយន្តក្រុង</li>
-                           <li>ជើងហោះហើរ</li>
-                           <li>អាហារ</li>
-                           <li>សណ្ឋាគារ</li>
-                           <li>រថយន្ត</li>
-                           <li>រថយន្តក្រុង</li>
-                           <li>ជើងហោះហើរ</li>
-                           <li>អាហារ</li>
-                        </ul>
-                     </div>
+                    ខេត្ត/តំបន់
+                    <div class="sub-menu-dropdown">
+                      <ul>
+                        <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
+                        <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                        <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                        <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                        <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
+                        <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
+                        <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
+                        <a href="កំពត.html"><li>កំពត</li></a>
+                        <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                        <a href="តាកែវ.html"><li>តាកែវ</li></a>
+                        <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                        <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                        <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
+                        <a href="កែប.html"><li>កែប</li></a>
+                        <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                        <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                        <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                        <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                        <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
+                        <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
+                        <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                        <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                        <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
+                        <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                        <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
+                        <a href="ស្វាយ.html"><li>ស្វាយ</li></a>
+                      </ul>
+                    </div>
                   </li>
                   <li>សណ្ឋាគារ</li>
                   <li>រថយន្ត</li>
                   <li>រថយន្តក្រុង</li>
                   <li>ជើងហោះហើរ</li>
                   <li>អាហារ</li>
-               </ul>
+                </ul>
             </div>
             <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia">
             <div id="left-side-menu" class="d-flex justify-content-between align-items-center">
@@ -86,10 +102,40 @@
                      </div>
                   </div>
                   <!-- All Content and Image put here -->
-                  <!-- Discription of post write here -->
-                  <p class="text-description"></p>
+                  <p class="text-description">កោះកុង គឺជាខេត្តនៃកម្ពុជា។ ទីរួមខេត្តគឺក្រុងខេមរភូមិន្ទ។ខេត្តនេះដែលមានក្រុងខេមរភូមិន្ទជាទីរួមខេត្តស្ថិតនៅភាគនិរតីនៃប្រទេសកម្ពុជា។</p>
+                  <p class="text-description">ខេត្តកោះកុងមានព្រំប្រទល់ ខាងជើងជាប់នឹងខេត្តពោធិ៍សាត់ ខាងកើតជាប់នឹងខេត្តកំពង់ស្ពឺ កំពត និង ព្រះសីហនុ ខាងត្បូងនិងខាងលិចជាប់នឹងឈូងសមុទ្រថៃ និងមួយផែ្នកនៃ ចង្វាតត្រាចប្រទេសថៃ។</p>
+                  <p class="text-description">ខេត្តកោះកុង មានកន្លែងកំសាន្ដដែលទាក់ទាញភ្ញៀវទេសចរណ៍ជាច្រើនមានដូចជា :</p>
+                  <p class="text-title-readmore">កោះកុងក្រៅ</p>
+                  <!-- Bootstrap Slide View -->
+                  <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                     <div class="carousel-indicators">
+                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                       <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                     </div>
+                     <div class="carousel-inner">
+                       <div class="carousel-item active">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ1.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ2.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                       <div class="carousel-item">
+                         <img src="images/Cambodia/កន្លែងកំសាន្ដ/កោះកុង/កោះកុងក្រៅ3.jpg" class="d-block w-100 img-content-post" alt="...">
+                       </div>
+                     </div>
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                       <span class="visually-hidden">Next</span>
+                     </button>
+                   </div>
+                   <!-- End Bootstrap Slide View -->
                   <!-- Sub Title it will show Border, Big , and color red -->
-                  <p class="text-title-readmore"></p></p>
+                  <p class="text-title-readmore"></p>
                   <!-- Sub Title 1 will show border, Big , color back -->
                   <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
                   <!-- Image post in Discription -->
@@ -161,5 +207,6 @@
       </footer>
       <script src="dist/js/script.js"></script>
       <script src="dist/js/calendar.js"></script>
+      <script src="dist/js/bootstrap/bootstrap.bundle.min.js"></script>
    </body>
 </html>
