--- a/index.html
+++ b/index.html
@@ -308,43 +308,43 @@
       </div>
       <div class="list-foods row mt-4">
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">ប្រហុកខ្ទិះ</p>
+          <img src="images/food/ប្រហុកខ្ទិះ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">សម្លប្រហើរ</p>
+          <img src="images/food/សម្លប្រហើរ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">សម្លកកូរ</p>
+          <img src="images/food/សម្លកកូរ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">អាម៉ុក</p>
+          <img src="images/food/អាម៉ុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">បុកត្រប់ពុតលំញង</p>
+          <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">ជ្រក់ក្រៅឆ្នាំង</p>
+          <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">ឆាអង្ក្រងសាច់គោ</p>
+          <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img" />
+          <p class="food-in-province m-0 text-end">នំបញ្ចុក</p>
+          <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
           <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
         </div>
       </div>
