--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
           <div class="area d-flex">
             <div class="col-">
-              <img src="images/Cambodia/បាត់ដំបង.jpg" alt="" />
+              <img src="images/Cambodia/btb.JPG" alt="" />
             </div>
             <div class="area-description">
               <a class="area-title" href="បាត់ដំបង.html">បាត់ដំបង</a>
@@ -257,10 +257,14 @@
       <div class="row">
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី" />
+            <img
+              src="images/Ankor_Wat_temple.jpg"
+              class="card-img-top"
+              alt="ព្រែកកាំពី"
+            />
             <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
+              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
               <p class="card-description mt-3">
                 ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
                 តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
@@ -271,10 +275,10 @@
         </div>
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី" />
+            <img src="" class="card-img-top" alt="ព្រែកកាំពី" />
             <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
               <p class="card-description mt-3">
                 ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
                 តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
