--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
             <img
-              src="images/Ankor_Wat_temple.jpg"
+              src="images/ខេត្តសៀមរាប.jpeg"
               class="card-img-top"
               alt="ព្រែកកាំពី"
             />
@@ -275,7 +275,11 @@
         </div>
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
-            <img src="" class="card-img-top" alt="ព្រែកកាំពី" />
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"
+              alt="ព្រែកកាំពី"
+            />
             <div class="card-body">
               <p class="card-title text-center">ភ្នំបូកគោ</p>
               <p class="card-subtitle text-center">ខេត្តកំពត</p>
@@ -289,10 +293,14 @@
         </div>
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី" />
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"
+              alt="ព្រែកកាំពី"
+            />
             <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
               <p class="card-description mt-3">
                 ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម
                 តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ
