--- a/index.html
+++ b/index.html
@@ -53,31 +53,30 @@
               <div class="sub-menu-dropdown">
                 <ul>
                   <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
-                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
-                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="កំពត.html"><li>កំពត</li></a>
+                  <a href="កែប.html"><li>កែប</li></a>
+                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
                   <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
                   <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
                   <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
-                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
-                  <a href="កំពត.html"><li>កំពត</li></a>
-                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
                   <a href="តាកែវ.html"><li>តាកែវ</li></a>
-                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
-                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
-                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
-                  <a href="កែប.html"><li>កែប</li></a>
-                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
-                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
-                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
-                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
-                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
-                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
-                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
                   <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
                   <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
-                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
                   <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
-                  <a href="ស្វាយ.html"><li>ស្វាយ</li></a>
                 </ul>
               </div>
             </li>
@@ -258,7 +257,7 @@
         <div class="col-12 col-md-4">
           <div class="card" style="width: 100%">
             <img
-              src="images/ខេត្តសៀមរាប.jpeg"
+              src="images/Cambodia/angkorwat1.jpg"
               class="card-img-top"
               alt="ព្រែកកាំពី"
             />
@@ -320,44 +319,44 @@
       </div>
       <div class="list-foods row mt-4">
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ប្រហុកខ្ទិះ</p>
+          <p class="food-in-province m-0 text-end">១</p>
           <img src="images/food/ប្រហុកខ្ទិះ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">ប្រហុកខ្ទិះ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">សម្លប្រហើរ</p>
+          <p class="food-in-province m-0 text-end">២</p>
           <img src="images/food/សម្លប្រហើរ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">សម្លប្រហើរ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">សម្លកកូរ</p>
+          <p class="food-in-province m-0 text-end">៣</p>
           <img src="images/food/សម្លកកូរ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">សម្លកកូរ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">អាម៉ុក</p>
+          <p class="food-in-province m-0 text-end">៤</p>
           <img src="images/food/អាម៉ុក.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">អាម៉ុក</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">បុកត្រប់ពុតលំញង</p>
+          <p class="food-in-province m-0 text-end">៥</p>
           <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ជ្រក់ក្រៅឆ្នាំង</p>
+          <p class="food-in-province m-0 text-end">៦</p>
           <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ឆាអង្ក្រងសាច់គោ</p>
+          <p class="food-in-province m-0 text-end">៧</p>
           <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
         </div>
         <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">នំបញ្ចុក</p>
+          <p class="food-in-province m-0 text-end">៨</p>
           <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
+          <p class="food-name m-0 text-center">នំបញ្ចុក</p>
         </div>
       </div>
     </div>
