--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -82,14 +82,15 @@
               <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តសៀមរាប</p>
             </div>
           </div>
-            <p class="text-description">ប្រទេសកម្ពុជា គឺ ជាប្រទេសមួយដែលមានវប្បធម៏ និង អរិយធម៏ចាស់ជាងគេក្នុងទ្វីបអាស៊ីអាគ្នេយ៍។</p>
-            <p class="text-description">ទោះបីជាប្រទេសកម្ពុជា មានប្រវត្តិស្ថិតនៅក្រោមអាណានិគមន៍នៃប្រទេសមួយចំនួន និង មានសង្រ្គាមស៊ីវិលអស់ជាច្រើនឆ្នាំក៏ដោយ តែបច្ចុប្បន្ននេះ កម្ពុជាមានសុខសន្តិភាពពេញបរិបូរណ៍ ប្រជាពលរដ្ឋ និង ភ្ញៀវទេសចរអន្តរជាតិ អាចធ្វើតំណើរកម្សាន្តបានគ្រប់ទីកន្លែង ជាមួយនិង ហេដ្ឋារចនាសម្ព័ន្ធ ដ៏ ស្រស់ស្អាត តំបន់ទេសចរណ៍ដ៏សម្បូរបែប ទាំងតំបន់ទេសចរណ៍ធម្មជាតិ តំបន់ទេសចរណ៍វប្បធម៏ និង តំបន់ទេសចរណ៍កែច្នៃរាប់រយកន្លែង</p>
-            <p class="text-description">ចំណុចដ៏មានសក្តានុពលទាំងអស់ខាងលើនេះហើយ ដែលជំរុញឱ្យវិស័យទេសចរណ៍ បានដើរតួនាទីយ៉ាងសំខាន់ សម្រាប់សេដ្ឋកិច្ចកម្ពុជា ដើម្បីចូលរួមក្នុងការអភិវឌ្ឍន៍សេដ្ឋកិច្ចកម្ពុជា ដើម្បីចូលរួមចំណែកក្នុង ការអភិវឌ្ឍន៍សេដ្ឋកិច្ចកម្ពុជា ប្រជាពលក្នុងប្រទេសកម្ពុជាគួរបង្វែរចាប់អារម្មណ៍អំពីការធ្វើដំណើរកម្សាន្តទៅក្រៅប្រទេស មកធ្វើដំណើរកម្សាន្ត ក្នុងស្រុក ដែលចំណាយអស់តិច និង អាចជួយសេដ្ឋកិច្ចកម្ពុជាបានយ៉ាយច្រើន តាមរយៈការបង់សេវាកម្សាន្ត ជួយផ្តល់ការងារសម្រា ប់ប្រជាពលរដ្ឋមូលដ្ឋាន (លក់អាហារ លក់វត្ថុអនុស្សវរីយ៍សម្រាប់តំបន់ ។ល។)</p>
-            <p class="text-description">និង ជួយក្នុងការប្រើប្រាស់សេវាផ្សេងៗរបស់រដ្ឋ។ យើងងាកមកមើលអំពីវិស័យទេសចរណ៍នៅក្នុងប្រទេសកម្ពុជាយើងវិញ ឃើញថាប្រទេសមួយនេះពិតជាមានធនធានធម្មជាតិ និង មានសម្បត្តិបេតិកភ័ណ្ឌជាតិជាច្រើន ដែលអាចទាក់ទាញភ្ញៀវជាតិ និង អន្តរជាតិឱ្យចូលទស្សនាឥតគណនា។</p>
-            <p class="text-title-readmore">​រាជធានីភ្នំពេញ</p>
-            <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-            <p class="text-description">មានទីតាំងស្ថិតនៅតាមបណ្តោយព្រះមហាវិថីសុធារស សាងសង់ឡើងនៅឆ្នាំ ១៨៦៦ នៅក្នុងរាជកាល ព្រះបាទនរោត្តម​។​</p>
-            <p class="text-description">នៅក្នុងព្រះបរមរាជវាំងមាន៖ </br> - ប្រាសាទទេវាវិនិច្ច័យ ជាកន្លែងដែលសម្រាប់ព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br> - ប្រាសាទខេមរិន្ទ ជាកន្លែងដែលព្រះមហាក្សត្រ និង អគ្គមហេសីគង់នៅ​​​</br> - ប្រាសាទសំរានភិរម្យ ជាកន្លែងដែលព្រះមហាក្សត្រឡើងគ្រងរាជ្យ </br> - ហោរបាគូ ឬ ហោរព្រះខ័នជាកន្លែងទុកដាក់វត្ថុសម្រាប់សោយរាជ្យ</br> - ច័ន្ទឆាយា ជាកន្លែងដែលគេហាត់រាំ របាំព្រះរាជ្យទ្រព្យ និង របាំថ្វាយព្រះមហាក្សត្រ ព្រះញ្ញាតិវង្សានុវង្ស និង ពួកមន្រ្តីជាន់ខ្ពស់ ។</p>
+            <p class="text-description">ខេត្តសៀមរាបជាខេត្តមួយដែលមានទីតាំងនៅភាគខាងពាយ័ព្យនៃប្រទេសកម្ពុជា ដែលមានទីតាំងស្ថិតនៅក្បែរបឹងទន្លេសាប។</p>
+            <p class="text-description">ទីរួមខេត្តរបស់ខេត្តសៀមរាបនេះគឺ ក្រុងសៀមរាប។ ខេត្តសៀមរាបត្រូវបានដាក់ឈ្មោះបែបនេះដើម្បី រំលឹកដល់ជ័យជំនះនៅកងទ័ពខ្មែរលើកងទ័ពសៀមនៅសម័យលង្វែកសតវត្ស១៦។</p>
+            <p class="text-description">សព្វថ្ងៃខេត្តសៀមរាបត្រូវបានគេស្គាល់ទូទាំងពិភពលោកថាជាខេត្តតាំងនៅនៃប្រាសាទអង្គរវត្តដ៏ល្បីល្បាញ។ ខេត្តសៀមរាបស្ថិតនៅភាគពាយ័ព្យនៃប្រទេសកម្ពុជា។ ខេត្តនេះជាតំបន់ទេសចរណ៍ដ៍សំខាន់របស់ប្រទេសកម្ពុជា ដោយសារខេត្តនេះមានប្រាសាទអង្គរវត្ត ដ៏ល្បីល្បាញ និងប្រាសាទបុរាណដទៃទៀតជាច្រើន។ ថ្មីៗនេះ ក្រុងសៀមរាបកំពុងប្រែក្លាយរូបរាងជាក្រុងទំនើបតាមរយៈកំណើនសណ្ឋាគារ ភោជនីយដ្ឋាន ហាងលក់ទំនិញ ជាដើមដែលបម្រើឱ្យវិស័យទេសចរណ៍។ </p>
+            <p class="text-description">មណីយដ្ឋានផ្សេងទៀតដែលនៅក្បែរក្រុងសៀមរាបមានរាជធានីអង្គរធំ ប្រាសាទអង្គរវត្ត ប្រាសាទបាយ័ន ប្រាសាទភ្នំបាខែង ប្រាសាទបក្សីចាំក្រុង ប្រាសាទបាពួន ប្រាសាទភិមានអាកាស ប្រាសាទបន្ទាយស្រី ប្រាសាទតាព្រហ្ម និងប្រាសាទរាប់រយផ្សេងទៀត។ តំបន់អង្គរត្រូវបានរងការលុកលុយជាច្រើនដងពីពួកសៀម ហើយទីបំផុតរាជធានីអង្គរត្រូវបានបោះបង់នៅឆ្នាំ ១៤៣១។</p>
+            <p class="text-description">គួររំលឹកផងដែរថា រាជធានីរបស់ប្រទេសកម្ពុជាត្រូវបានពីប្តូរពីអង្គរទៅរាជធានីចតុមុខនៅឆ្នាំ ១៤៣២ រួចទៅបន្ទាយលង្វែក និង រាជធានីឧដុង្គ និងត្រលប់ទៅរាជធានីចតុមុខវិញនៅឆ្នាំ ១៨៦៦។ ជនជាតិបទេស ដែលបានមកដល់ប្រាសាទអង្គរវត្តមុនគេគឺអ្នករុករកជនជាតិបារាំង លោក ហង់រី មូហូ (Henri Mouhot)ក្នុងឆ្នាំ១៨៦០។ តំបន់សៀមរាបអង្គរគឺជាគោលដៅចម្បងសម្រាប់ភ្ញៀវទេសចរទូទាំងពិភពលោក ហើយក៏ជាតំបនដែលសម្បូរណ៍ទៅដោយសំណង់ប្រាសាទបុរាណតូចធំជាច្រើន ដែលជាទីស្ថានរបស់ពពួកអាទិទេពទាំងឡាយទាំងពួងផងដែរ។</p>
+            <p class="text-title-readmore">​ខេត្តសៀមរាប</p>
+            <p class="text-description-header">ខេត្តសៀមរាបជាតំបន់ដែលមានប្រាសាទបុរាណ្យជាច្រើន​ សម្រាប់ភ្ញៀវជាតិ និងអន្តរជាតិមកសិក្សារស្រាវជ្រាវអំពីប្រាសាទបុរាណ្យដ៏អស្ចារ្យមួយនេះ។ មិនត្រឺមតែប៉ុណ្ណោះទេតែទាំងមានប្រាសាទជាច្រើនផ្សេងៗទៀតសម្រាប់ការសិក្សារស្រាវជ្រាវ។</p>
+            <p class="text-description">ខេត្តសៀមរាបមានទីកន្លែងកំសាន្ដជាច្រើនដូចជា៖</p>
+            <p class="text-description">-កាហ្វេ វប្បធម៌ <br> - Angkor Balloon <br> -ប្រាសាទអង្គរវត្ត <br> -ប្រាសាទបាគង <br> -រមនីយ៍ដ្ឋានជាច្រើន <br> -និងប្រាសាទជាច្រើន... ។ </p>
             <p class="text-title-readmore">តាមបណ្ដាលខេត្តក្រុង</p>
             <p class="text-description"> - ខេត្តសៀមរាបអង្គរវត្ត​</p>
             <img class="img-content-post" src="./images/ខេត្តសៀមរាប.jpeg">
